--- a/src/app/Persona/add/add.component.html
+++ b/src/app/Persona/add/add.component.html
@@ -1,1 +1,55 @@
-<p>add works!</p>
+<div class="container-fluid">
+
+    <div class="row justify-content-center">
+        <div class="card" style="width: 700px;">
+            <h5 class="card-header">Add Person</h5>
+            <div class="card-body">
+                <form action="">
+                    <div class="form-row">
+
+                        <div class="form-group col">
+                            <input type="text" #nombre class="form-control" placeholder="First name">
+                        </div>
+                        <div class="col-7">
+                            <input type="text" #apellido class="form-control" placeholder="Last name">
+                        </div>
+
+
+                    </div>
+
+                    <div class="form-row">
+
+
+                        <div class="form-group col">
+                            <select class="form-control " #tipoDocumento>
+                                <option value="DNI">DNI</option>
+                                <option value="CI">CI</option>
+                                <option value="LE">LE</option>
+                                <option value="LC">LC</option>
+                            </select>
+
+                        </div>
+
+                        <div class="col">
+                            <input type="number" #numeroDocumento class="form-control" placeholder="Document Number">
+                        </div>
+
+
+                    </div>
+
+                    <div class="text-center">
+
+                        <button (click)="guardar(nombre.value,apellido.value,tipoDocumento.value,numeroDocumento.value)"
+                            class="btn btn-info">Save</button>
+
+                    </div>
+
+                </form>
+            </div>
+        </div>
+
+
+
+    </div>
+
+</div>
