--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -350,8 +350,8 @@
 
     <div class="text-center">
 
-      <button (click)="listar()" class="btn btn-primary" style="margin-right: 10px;">Listar</button>
-      <button (click)="nuevo()" class="btn btn-primary">Nuevo</button>
+      <button (click)="listar()" class="btn btn-primary" style="margin-right: 10px;">List</button>
+      <button (click)="nuevo()" class="btn btn-primary">Add </button>
 
     </div>
 
